fix flen to align self and margin im website

--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,5 +1,4 @@
 .place__website {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  align-self: flex-end;
+  margin-bottom: 48px;
 }
